# tenter-rs

./: .gitignore  .pre-commit-hooks.yaml  .tenter.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  action.yml
.github/workflows/: ci.yml  release.yml
docs/: demo.tape  seed-sample.sh
hooks/: tenter-precommit.sh
src/: check.rs  config.rs  finding.rs  glob.rs  main.rs  rules.rs  scanner.rs
src/output/: human.rs  json.rs  sarif.rs
tests/: integration.rs
